# webgraph-algo-rs

./: .gitignore  Cargo.toml  benchmark.py  delta_sum_sweep.py
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: criterion_benchmark.rs  iai_benchmark.rs
benches/single_benches/: bench_bfv.rs  mod.rs  params.rs
src/: lib.rs  main.rs
src/algo/: acyclicity.rs  mod.rs  top_sort.rs  traits.rs  types.rs
src/algo/bfv/: builder.rs  mod.rs  parallel.rs  parallel_associative.rs  parallel_exclusive.rs  parallel_fast_cb.rs  parallel_low_mem.rs  pram.rs  single_thread.rs  traits.rs
src/algo/dfv/: builder.rs  mod.rs  single_thread.rs  traits.rs
src/algo/diameter/: dir_sum_sweep.rs  exact_sum_sweep.rs  mod.rs  output.rs  scc_graph.rs  sum_sweep.rs  undir_sum_sweep.rs
src/algo/exact_sum_sweep/: computer.rs  dir_outputs.rs  directed.rs  mod.rs  output_level.rs  scc_graph.rs  undir_outputs.rs  undirected.rs
src/algo/hyperball/: hyperball_impl.rs  kahan_sum.rs  mod.rs
src/algo/internals/: bit_vec.rs  mod.rs
src/algo/sccs/: kosaraju.rs  mod.rs  symm_df.rs  symm_par.rs  symm_seq.rs  tarjan.rs  traits.rs
src/algo/strongly_connected_components/: kk.rs  kosaraju.rs  mod.rs  tarjan.rs  traits.rs
src/algo/visits/: mod.rs
src/algo/visits/bfv/: mod.rs  parallel.rs  parallel_fast_cb.rs  single_thread.rs
src/algo/visits/breadth_first/: mod.rs  par_fair.rs  par_low_mem.rs  seq.rs
src/algo/visits/depth_first/: mod.rs  seq.rs
src/algo/visits/dfv/: mod.rs  single_thread.rs
src/utils/: argmax.rs  argmin.rs  closure_vec.rs  counter.rs  hyper_log_log.rs  jenkins.rs  mmap_helper.rs  mmap_slice.rs  mod.rs  slice_counter_array.rs  threadpool.rs  traits.rs
src/utils/hyper_log_log/: bitwise_utils.rs  hyper_log_log_array.rs  hyper_log_log_counter.rs  hyper_log_log_counter2.rs  hyper_log_log_logic.rs  mod.rs  slice_counter_array.rs  traits.rs
tests/: test_bfv.rs  test_depth_first.rs  test_dir_sum_sweep.rs  test_exact_sum_sweep.rs  test_hyperball.rs  test_hyperloglog.rs  test_hyperloglog_counter.rs  test_math.rs  test_mmap_helper.rs  test_scc.rs  test_sccs.rs  test_sum_sweep.rs  test_undir_sum_sweep.rs
tests/graphs/: cnr-2000-t.ef  cnr-2000-t.graph  cnr-2000-t.offsets  cnr-2000.ef  cnr-2000.graph  cnr-2000.offsets  in-2004.ef  in-2004.offsets
tests/hyperball_results/: cnr-2000_closeness_centrality  cnr-2000_harmonic_centrality  cnr-2000_lin_centrality  cnr-2000_nieminen_centrality  cnr-2000_sum_of_distances
