[package]
name = "webgraph-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features=["backtrace"]}
dsi-progress-logger = "0.2.3"
mmap-rs = "0.6.1"
nonmax = "0.5.5"
rayon = "1.8.1"
stderrlog = "0.6.0"
sux = {git = "https://github.com/vigna/sux-rs"}
tempfile = "3.10.1"
webgraph = {git = "https://github.com/vigna/webgraph-rs"}
parallel_frontier = {git = "https://github.com/zommiommy/parallel_frontier"}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai = "0.1"
rand = "0.8.5"

[[bench]]
name = "criterion_benchmark"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false
