[package]
name = "webgraph-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features=["backtrace"]}
common_traits = "0.11.0"
dsi-progress-logger = "0.2.3"
epserde = "0.6.1"
mmap-rs = "0.6.1"
nonmax = "0.5.5"
rayon = "1.8.1"
stderrlog = "0.6.0"
rand = "0.8.5"
sux = "0.4.4"
tempfile = "3.10.1"
webgraph = {git = "https://github.com/vigna/webgraph-rs"}
parallel_frontier = {git = "https://github.com/zommiommy/parallel_frontier"}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
xxhash-rust = "0.8.12"

[[bench]]
name = "criterion_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
