[package]
name = "webgraph-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
common_traits = "0.11.0"
dsi-progress-logger = "0.5.0"
epserde = "0.6.1"
mmap-rs = "0.6.1"
nonmax = "0.5.5"
rayon = "1.8.1"
stderrlog = "0.6.0"
kahan = "0.1.4"
rand = "0.8.5"
sux = "0.6.0"
tempfile = "3.10.1"
webgraph = { git = "https://github.com/vigna/webgraph-rs" }
parallel_frontier = { git = "https://github.com/zommiommy/parallel_frontier" }
unwrap-infallible = "0.1.5"
thiserror = "2.0.0"
sealed = "0.6.0"
lender = "0.2.9"
impl-tools = "0.10.1"
sync-cell-slice = "0.9.9"
no-break = "0.1.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
xxhash-rust = "0.8.12"

[[bench]]
name = "criterion_benchmark"
harness = false

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = true

[features]
slow_tests = []
